[README] Note about evil-collection

--- a/README.org
+++ b/README.org
@@ -1,1 +1,5 @@
 * One Step Further via Emacs
+
+** Evilize key bindings
+
+Part of code of osf-evilize-xx.el are adapted from [[https://github.com/emacs-evil/evil-collection][evil-collection]].
